style: fix to make contact cards bg img visible

--- a/packages/storybook/src/templates/globals.css
+++ b/packages/storybook/src/templates/globals.css
@@ -114,6 +114,10 @@ body {
   }
 }
 
+.rhc-card--full-bleed {
+  z-index: 1;
+}
+
 /**
  * Temporary solution as Utrecht Figure on its own doesn't unset the user agent stylesheet of margin-inline 40px.
  * TODO: Discuss intended solution with team.
